# trace-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: bench_linux.sh  compare5.sh  fetch_perfetto_sdk.sh  measure.py  perfetto_track_event.cfg  run_matrix.py
src/: bench_trace.hpp  harness.hpp  main.cpp  trace_backend.cpp  trace_backend.hpp  workload.hpp
